@@ -4,8 +4,8 @@
 #ifndef __E2K_TYPES_H__
 #define __E2K_TYPES_H__
 
-#include <glib/gtypes.h>
-#include <bonobo/bonobo-i18n.h>
+#include <glib.h>
+#include <glib/gi18n.h>
 
 typedef struct _E2kAction                     E2kAction;
 typedef struct _E2kAddrEntry                  E2kAddrEntry;
