@@ -26,7 +26,7 @@
 
 #include <string.h>
 #include <glib.h>
-#include <libgnome/gnome-i18n.h>
+#include <glib/gi18n-lib.h>
 #include <libgnome/gnome-util.h>
 
 #include <gtk/gtkentry.h>
