@@ -1,3 +1,14 @@
+2005-02-04  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+        * addressbook/e-book-backend-gal.c :
+        * lib/e2k-types.h :
+        * shell/e-folder-creation-dialog.c :
+        * shell/e-folder-dnd-bridge.c :
+        * shell/e-folder-misc-dialogs.c :
+        * shell/e-folder-selection-dialog.c :
+        * shell/e-storage.c :
+        Should now be using gi18n.h/gi18n-lib.h
+
 2005-02-04  Kostas Papadimas <pkst@gnome.org>
 
         * configure.in (ALL_LINGUAS): Added 'el' (Greek).
